# VoxAlic

./: .gitignore  .hermes.md  API_SNAPSHOT.md  CHANGELOG.md  CLAUDE.md  CODE_AUDIT.md  CODE_NOTES.md  HANDOVER.md  README.md  findings.md  index.html  latest.json  notify.html  package-lock.json  package.json  progress.md  task_plan.md  vite.config.ts
.cargo/: config.toml
.claude/skills/multi-round-deliberation/: SKILL.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-28-mission-timer-plan.md
docs/superpowers/specs/: 2026-05-28-mission-timer-design.md
src/: events.ts  main.ts  notify.ts  state.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: arbitration_meta.json  baro_zh.json  cetus_bounty_rewards.json  circuit_names.json  deimos_bounty_rewards.json  entrati_lab_bounty_rewards.json  hex_bounty_rewards.json  solaris_bounty_rewards.json  zariman_bounty_rewards.json
src-tauri/src/: api.rs  capture.rs  config.rs  item_i18n.rs  lib.rs  log_init.rs  main.rs  market.rs  market_auth.rs  market_orders.rs  mission_timer.rs  models.rs  ocr.rs  phone_push.rs  smtp_creds.rs.example  state.rs  window.rs
src/tabs/: cycles.ts  fissures.ts  market.ts  settings.ts  timer.ts
