[package]
name = "tauri-warframe-monitor"
version = "0.1.0"
description = "Warframe Fissure Monitor"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_warframe_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
image = { version = "0.25", default-features = false, features = ["png"] }
